--- a/backend/src/Pipfile
+++ b/backend/src/Pipfile
@@ -18,6 +18,9 @@ python-dotenv = "*"
 pymysql = "*"
 flask-login = "*"
 flask-bcrypt = "*"
+pyserial = "*"
+arduino-iot-cloud = "*"
+swig = "*"
 
 [dev-packages]
 
