Massively overhauled system, added Hub and Sensor to DB, changed Arduino Cloud interaction

--- a/website/src/Pipfile
+++ b/website/src/Pipfile
@@ -22,6 +22,8 @@ pyserial = "*"
 arduino-iot-cloud = "*"
 swig = "*"
 bokeh = "*"
+arduino-iot-client = "*"
+requests-oauthlib = "*"
 
 [dev-packages]
 
