Uses RQ to support background tasks to update the database regularly

--- a/website/src/Pipfile
+++ b/website/src/Pipfile
@@ -24,6 +24,10 @@ swig = "*"
 bokeh = "*"
 arduino-iot-client = "*"
 requests-oauthlib = "*"
+flask-rq2 = "*"
+rq-scheduler = "*"
+rq = "*"
+redis = "*"
 
 [dev-packages]
 
